--- a/src/app/components/output/output.component.html
+++ b/src/app/components/output/output.component.html
@@ -1,3 +1,6 @@
-<p>
-  output works!
-</p>
+<h3>Historial de conversiones</h3>
+
+<div class="container">
+  <div class="output" *ngFor="let output of outputHistory"> {{output}} </div>
+
+</div>
